--- a/src/style.css
+++ b/src/style.css
@@ -73,6 +73,7 @@ nav li a {
 
 .banner img {
     max-width: 100%;
+
 }
 
 /* welcome texten i bannern, welcome-klassen är barn till banner-föräldern  */
@@ -94,26 +95,29 @@ nav li a {
 
 /* p tagg i welcome texten på bannern */
 .banner .welcome p {
-    color: orange;
+    color:  rgb(191, 146, 91);
 }
 
 /* länken i bannern - under welcome text */
 .learnmore a {
     background-color: rgba (255, 255, 255, .2); /* ingen bakgrundsfärg */
     text-decoration: none; /* ingen underline i länk */
-    color: orange;
+    color:  rgb(191, 146, 91);
     padding: 
     border: 1px solid orange;
     
- 
-  
+    
 
+}
+
+a:hover {
+    color:  rgb(191, 146, 91);
 }
 
 /* p klass som blir boxen runt länken */
 .learnmore {
     background-color: rgba (255, 255, 255, .2);
-    border: 1px solid orange; /* kantlinje runt box */
+    border: 1px solid  rgb(191, 146, 91); /* kantlinje runt box */
     height: 15px;
     width: 200px;
     padding: 10px;
@@ -159,10 +163,10 @@ h1 {
 
 /* sektion klassen under bannern */
 .tjanster {
-    background-color: orange;
+    background-color:  rgb(223, 182, 131);
     height: 500px;
     max-width: 100%;
-    border: 1px solid black;
+   
     margin: 0 auto;
     display: grid;
     grid-template-columns: repeat(4, 25%);
@@ -171,10 +175,10 @@ h1 {
 
 /* div boxarna i tjanster klassen */
 .tjanster > div {
-    background-color: orange;
+    background-color: rgb(223, 182, 131);
     text-align: center;
     padding: 20px;
-    border: 1px solid black;
+    margin-top: 0;
 }
 
 /* .tjanster > div:nth-child(1) {
@@ -184,13 +188,60 @@ h1 {
 
 /* egenskaper för box 2 */
 .tjanster .box2 {
-    background-color: beige;
+    background-color: rgb(191, 146, 91);
 }
 
 .tjanster .box4 {
-    background-color: beige;
+    background-color: rgb(191, 146, 91);
 }
 
+.box1 div img {
+    width: 250px;
+    height: 250px;
+    border-radius: 50%;
+    margin-top: -50%;
+    z-index: 4;
+}
+
+.box2 div img {
+    width: 250px;
+    height: 250px;
+    border-radius: 50%;
+    margin-top: -50%;
+    z-index: 4;
+}
+
+.box3 div img {
+    width: 250px;
+    height: 250px;
+    border-radius: 50%;
+    margin-top: -50%;
+    z-index: 4;
+}
+
+.box4 div img {
+    width: 250px;
+    height: 250px;
+    border-radius: 50%;
+    margin-top: -50%;
+    z-index: 4;
+}
+
+
+.about-barber .about.main {
+    background-color: rgb(235, 232, 222)
+    width: 100%;
+    height: 500px;
+    padding: 50px;
+    margin: 0 auto;
+}
+
+.about-barber .about-main img {
+    width: 50%;
+    height: 900px;
+    
+    z-index: 5;
+}
 
 
 /* .tjanster img{
