--- a/src/style.css
+++ b/src/style.css
@@ -160,6 +160,7 @@ h1 {
 .tjanster {
     background-color:  rgb(223, 182, 131);
     width: 100%;
+    height: 400px;
     margin: 0 auto;
     display: grid;
     padding: 0;
@@ -225,43 +226,85 @@ h1 {
     background-color: white;
     max-width: 100%;
     margin: 0 auto;
-    display: grid;
-    grid-template-columns: repeat(2, 50%);
+    display: flex;
+    /* grid-template-columns: repeat(2, 50%); */
 
 }
 
-.about-barber .about.main {
-    background-color: white;
-    width: 100%;
-    height: 500px;
-    padding: 50px;
-    margin: 0 auto;
+.about-barber img {
+    width: 50%;
+    height: 1000px;
 }
 
 
-.about-barber .about-main img {
-    width: 100%;
-    height: 950px;
-    
-   
-}
-
-.about-text {
+.about-barber .about-text {
     display: inline-block;
     position: absolute;
+    left: 60%;
+    top: 200%; /* top: 40%; hamnar från startsidans topp 40% ner'??? */
+    text-align:    
     
-    
+}
+
+.about-barber h4 {
+    font-size: ;
+    color:  rgb(191, 146, 91);
+}
+
+.about-barber .about-text .smooth-barber {
+    font-size: 30px;
+}
+
+.calender {
+    background-color: rgb(191, 146, 91);
+    display: inline-block;
+    position: absolute;
+    left: 60%;
+    top: 250%; /* tror detta är fel, % från top på startsidan*/
+    height: 100px;
+    width: 300px;
+}
+
+.number-text {
+    color: white;
+    display: inline-block;
+    position: absolute;
+
 }
 
 
 
 .testimonial {
     background-color: rgb(235, 232, 222);
-    height: 500px;
+    height: 600px;
     width: 100vw;
     margin: 0 auto;
+
     
 
+}
+
+.testimonial div {
+    background-color: white;
+    height: 120px;
+    padding: 10px;
+    width: 120px;
+    display: inline-block;
+    
+
+}
+
+.testimonial h4 {
+    font-size: 20px;
+    color: rgb(191, 146, 91);
+    text-align: center;
+    margin: 0;
+    padding-top: 100px;
+}
+
+.testimonial p {
+    font-size: 30px;
+    text-align: center;
 }
 
 
@@ -274,8 +317,105 @@ h1 {
     
 }
 
-@media screen and (min-width: 400px) {
+.footer div {
+    display: inline-block;
+    width: 20%;
+}
+
+.footer div h5 {
+    font-size: 20px;
+}
+
+.footer div p {
+    font-size: 15px;
+}
+
+
+
+
+/* responsiv */
+@media screen and (max-width: 1400px) {
     .banner .welcome h2{
-      
+    font-size: 20px;  
+
+    .main-nav li {
+        font-size: 25px;
+    }
 
 }
+
+@media screen and (max-width: 960px) {
+    .banner .welcome h2{
+    font-size: 15px;  
+
+}
+
+@media screen and (max-width: 700px) {
+    .banner {
+    position: absolute;    
+    }
+
+    .banner .welcome{
+    position: relative; 
+    text-align: center;
+    padding: 5px; }
+
+    .banner .welcome h2{
+    font-size: 10px;  }
+
+    .banner .welcome span {
+    font-size: 1em; }
+    
+    .tjanster .img {
+    display: block;
+    width: 100%;
+    margin: 20px auto;
+    }  
+
+    }
+    
+    @media screen and (max-width: 680px) {
+    .tjanster .img {
+    display: block;
+    width: 100%;
+    margin: 20px auto;
+    } 
+
+
+    }
+
+
+    @media screen and (max-width: 560px) {
+    .banner {
+    position: relative;    
+    }
+
+
+    .tjanster {
+        display: block;
+    }
+
+    .tjanster .img {
+        display: block;
+        width: 100%;
+        margin: 20px auto;
+        }  
+
+    .main-nav li {
+        display: block;
+        font-size: 10px;
+        width: 100%;
+        margin: 5px 0;
+    }
+
+    header {
+        position: relative;}
+
+    .main-nav { 
+        top: 0;
+    }    
+    }
+
+    }
+    
+    }
