--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,23 @@
+@font-face {
+    font-family: Barlow;
+    src: url(font-family/BarlowSemiCondensed-Regular.ttf);
+}
+
+@font-face {
+    font-family: Barlow-bold;
+    src: url(font-family/BarlowSemiCondensed-Bold.ttf);
+}
+
+@font-face {
+    font-family: Poppins;
+    src: url(font-family/Poppins-Regular.ttf);
+}
+
+@font-face {
+    font-family: Poppins bold;
+    src: url(font-family/Poppins-Bold.ttf);
+}
+
 body {
     margin: 0;
     padding: 0; /* tar bort utrymme på kanter */
@@ -56,6 +76,7 @@ nav li {
     font-size: 25;
     width: 25%; 
     padding-top: 10px;
+    font-family: Barlow;
     
 
 }
@@ -87,22 +108,26 @@ nav li a {
 
 .banner h2{
     font-size: 30px;
+    font-family: Barlow;
     color: white;
 }
 
 .banner .welcome .undertext {
     color: white;
+    font-family: Poppins;
 }
 
 /* p tagg i welcome texten på bannern */
 .banner .welcome p {
     color:  rgb(191, 146, 91);
+    font-family: Poppins;
 }
 
 .undertext {
     border-left: 3px solid rgb(191, 146, 91);
     padding-bottom: 90px;
     padding-left: 60px;
+    font-family: Poppins;
 }
 
 /* länken i bannern med kantlinje - under welcome text */
@@ -115,6 +140,7 @@ nav li a {
     border: 1px solid rgb(191, 146, 91); /* kantlinje runt länk */
     bottom: 50px;
     left: 60px;
+    font-family: Barlow-bold;
 }
     
 a:hover {
@@ -130,6 +156,7 @@ a:hover {
 h1 {
     color: white;
     font-size: ;
+    font-family: Barlow;
     display: flex;
     white-space: nowrap;
     margin: auto;
@@ -166,6 +193,18 @@ h1 {
     padding: 0;
     gap: 0;
     grid-template-columns: repeat(4, 25%);
+}
+
+.tjanster h3 {
+    font-family: Barlow-bold;
+    font-size: 20px;
+    color: white;
+}
+
+.tjanster p {
+    font-family: Poppins;
+    color: white;
+    font-size: 12px;
 }
 
 /* div boxarna i tjanster klassen */
@@ -242,17 +281,23 @@ h1 {
     position: absolute;
     left: 60%;
     top: 200%; /* top: 40%; hamnar från startsidans topp 40% ner'??? */
-    text-align:    
+      
     
 }
 
 .about-barber h4 {
     font-size: ;
     color:  rgb(191, 146, 91);
+    font-family: Barlow-bold;
+}
+
+.about-text p {
+    font-family: Poppins;
 }
 
 .about-barber .about-text .smooth-barber {
     font-size: 30px;
+    font-family: Poppins;
 }
 
 .calender {
@@ -269,6 +314,7 @@ h1 {
     color: white;
     display: inline-block;
     position: absolute;
+    font-family: Barlow-bold;
 
 }
 
@@ -288,14 +334,17 @@ h1 {
     background-color: white;
     height: 120px;
     padding: 10px;
-    width: 120px;
+    width: 200px;
     display: inline-block;
+    position: relative;
+    left: 25%;
     
 
 }
 
 .testimonial h4 {
     font-size: 20px;
+    font-family: Barlow-bold;
     color: rgb(191, 146, 91);
     text-align: center;
     margin: 0;
@@ -305,6 +354,7 @@ h1 {
 .testimonial p {
     font-size: 30px;
     text-align: center;
+    font-family: Poppins;
 }
 
 
@@ -324,10 +374,12 @@ h1 {
 
 .footer div h5 {
     font-size: 20px;
+    font-family: Barlow-bold;
 }
 
 .footer div p {
     font-size: 15px;
+    font-family: Barlow-bold;
 }
 
 
@@ -356,8 +408,7 @@ h1 {
     }
 
     .banner .welcome{
-    position: relative; 
-    text-align: center;
+    position: absolute; 
     padding: 5px; }
 
     .banner .welcome h2{
@@ -381,13 +432,42 @@ h1 {
     margin: 20px auto;
     } 
 
+    .main-nav li {
+        display: block;
+        font-size: 20px;
+        width: 100%;
+        margin: 5px 0;
+      
+        
+    }
+    .main-nav ul {
+        background-color: black;
+        text-align: center;
+        
+    }
+
+    .banner .welcome{
+        position: absolute; 
+        padding: 5px; 
+        left: 1%;
+        top: 1%}
+    
+        .banner .welcome h2{
+        font-size: 10px;  
+        left: 1%;
+        top: 1%;
+    }
+    
+        .banner .welcome span {
+        font-size: 1em; }
 
     }
 
 
     @media screen and (max-width: 560px) {
     .banner {
-    position: relative;    
+    position: relative; 
+
     }
 
 
@@ -403,9 +483,16 @@ h1 {
 
     .main-nav li {
         display: block;
-        font-size: 10px;
+        font-size: 15px;
         width: 100%;
         margin: 5px 0;
+      
+        
+    }
+    .main-nav ul {
+        background-color: black;
+        text-align: center;
+        
     }
 
     header {
